Issue #2315599 by Denchev: Add DER as test dependency.

--- a/relation.info.yml
+++ b/relation.info.yml
@@ -6,3 +6,5 @@ core: 8.x
 configure: entity.relation_type.collection
 dependencies:
   - relation_endpoint
+test_dependencies:
+  - dynamic_entity_reference
